--- a/src/componets/card/card.css
+++ b/src/componets/card/card.css
@@ -1,5 +1,5 @@
 .Card {
-  border-radius: 10px;
+  border-radius: 20px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -8,6 +8,7 @@
   margin: 20px 30px 20px 0;
   transition: all .2s ease-in-out;
   position: relative;
+  color: antiquewhite;
 }
 .Card:hover {
   transform: scale(1.1);
