--- a/src/componets/slider/slider.css
+++ b/src/componets/slider/slider.css
@@ -16,7 +16,7 @@
   justify-content: center;
   font-size: 25px;
   color: #FFF;
-  background-color: rgba(45,113,143,0.5);
+  background-color: burlywood;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -26,7 +26,7 @@
 }
 
 .Slider-arrows:hover {
-  background-color: rgba(45,113,143,0.9);
+  background-color:  burlywood;
 }
 
 .Slider-arrows:focus {outline:0;}
